<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.storesmkn1gending.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/hometodetail"
            app:destination="@+id/navigation_detail"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_forum"
        android:name="com.example.storesmkn1gending.ui.dashboard.DashboardFragment"
        android:label="@string/title_forum"
        tools:layout="@layout/fragment_dashboard">

    </fragment>

    <fragment
        android:id="@+id/navigation_myCart"
        android:name="com.example.storesmkn1gending.ui.myCart.MyCartFragment"
        android:label="@string/title_mycart"
        tools:layout="@layout/fragment_mycart">

    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.storesmkn1gending.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.example.storesmkn1gending.ui.detailProduct.DetailProductFragment"
        android:label="Detail"
        tools:layout="@layout/fragment_detail_product"/>
</navigation>