<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailProduct.DetailProductActivity">

    <ImageView
        android:id="@+id/detail_imageview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:maxLines="2"
        android:text="@string/location"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_imageview" />

    <TextView
        android:id="@+id/disc_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/discription"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_tv" />

    <TextView
        android:id="@+id/location_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:maxLines="2"
        android:text="@string/location"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disc_tv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addtomycart_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:cornerRadius="5dp"
        android:text="@string/addMyCart"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="30dp" />


</androidx.constraintlayout.widget.ConstraintLayout>